--- a/index.html
+++ b/index.html
@@ -897,7 +897,38 @@
 
     <!--! policy start -->
     <section id="policy">
-        <div class="container"></div>
+        <div class="container">
+            <ul class="policy-list">
+                <li class="policy-list-item">
+                    <i class="bi bi-truck"></i>
+                    <div class="policy-texts">
+                        <strong>FREE DELIVERY</strong>
+                        <span>From $49.99</span>
+                    </div>
+                </li>
+                <li class="policy-list-item">
+                    <i class="bi bi-headset"></i>
+                    <div class="policy-texts">
+                        <strong>SUPPORT 24/7</strong>
+                        <span>Online 24 hours</span>
+                    </div>
+                </li>
+                <li class="policy-list-item">
+                    <i class="bi bi-arrow-clockwise"></i>
+                    <div class="policy-texts">
+                        <strong>30 DAYS RETURN</strong>
+                        <span>Simply return it within 30 days</span>
+                    </div>
+                </li>
+                <li class="policy-list-item">
+                    <i class="bi bi-credit-card"></i>
+                    <div class="policy-texts">
+                        <strong>PAYMENT METHOD</strong>
+                        <span>Secure payment</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
     <!--! policy end -->
 
