--- a/index.html
+++ b/index.html
@@ -986,8 +986,137 @@
                 </div>
             </div>
         </div>
-        <div class="widgets-row"></div>
-        <div class="copyright-row"></div>
+        <div class="widgets-row">
+            <div class="container">
+                <div class="footer-widgets">
+                    <div class="brand-info">
+                        <div class="footer-logo">
+                            <a href="#" class="logo">LOGO</a>
+                        </div>
+                        <div class="footer-desc">
+                            <p> Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+                                vel facilisis in termapol.
+                            </p>
+                        </div>
+                        <div class="footer-contact">
+                            <a href="tel:+800 1234 5678 90">(+800) 1234 5678 90</a> – <a
+                                href="mailto:info@example.com">info@example.com</a>
+                        </div>
+                    </div>
+                    <div class="footer-widgets-nav-menu">
+                        <div class="widget-nav-menu">
+                            <h4>Information</h4>
+                            <ul class="menu-list">
+                                <li>
+                                    <a href="#">About Us</a>
+                                </li>
+                                <li>
+                                    <a href="#">Privacy Policy</a>
+                                </li>
+                                <li>
+                                    <a href="#">Returns Policy</a>
+                                </li>
+                                <li>
+                                    <a href="#">Shipping Policy</a>
+                                </li>
+                                <li>
+                                    <a href="#">Dropshipping</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="widget-nav-menu">
+                            <h4>Account</h4>
+                            <ul class="menu-list">
+                                <li>
+                                    <a href="#">Dashboard</a>
+                                </li>
+                                <li>
+                                    <a href="#">My Orders</a>
+                                </li>
+                                <li>
+                                    <a href="#">My Wishlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Account details</a>
+                                </li>
+                                <li>
+                                    <a href="#">Track My Orders</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="widget-nav-menu">
+                            <h4>Shop</h4>
+                            <ul class="menu-list">
+                                <li>
+                                    <a href="#">Affiliate</a>
+                                </li>
+                                <li>
+                                    <a href="#">Bestsellers</a>
+                                </li>
+                                <li>
+                                    <a href="#">Discount</a>
+                                </li>
+                                <li>
+                                    <a href="#">Latest Products</a>
+                                </li>
+                                <li>
+                                    <a href="#">Sale Products</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="widget-nav-menu">
+                            <h4>Categories</h4>
+                            <ul class="menu-list">
+                                <li>
+                                    <a href="#">Women</a>
+                                </li>
+                                <li>
+                                    <a href="#">Men</a>
+                                </li>
+                                <li>
+                                    <a href="#">Bags</a>
+                                </li>
+                                <li>
+                                    <a href="#">Outerwear</a>
+                                </li>
+                                <li>
+                                    <a href="#">Shoes</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright-row">
+            <div class="container">
+                <div class="footer-copyright">
+                    <div class="footer-copyright-left">
+                        <div class="site-copyright">
+                            Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Ömer Söyleyen.
+                        </div>
+                        <a href="#">
+                            <img src="img/footer/cards.png" alt="">
+                        </a>
+                    </div>
+                    <div class="footer-copyright-right">
+                        <div class="footer-menu">
+                            <ul class="footer-menu-list">
+                                <li class="list-item">
+                                    <a href="#">Privacy Policy</a>
+                                </li>
+                                <li class="list-item">
+                                    <a href="#">Terms and Conditions</a>
+                                </li>
+                                <li class="list-item">
+                                    <a href="#">Returns Policy</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     <!--! footer end -->
 </body>
