--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Commerce</title>
+    <title>Shop</title>
     <!--! Bootstrap Icons CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -35,7 +35,7 @@
                         <nav id="navigation">
                             <ul id="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link active">
+                                    <a href="index.html" class="menu-link active">
                                         Home
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
