--- a/account.html
+++ b/account.html
@@ -540,6 +540,8 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
