--- a/blog.html
+++ b/blog.html
@@ -601,6 +601,8 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
