--- a/card.html
+++ b/card.html
@@ -577,6 +577,8 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
