--- a/contact.html
+++ b/contact.html
@@ -558,6 +558,8 @@
         </div>
     </footer>
     <!--! footer end -->
+
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
