--- a/product-details.html
+++ b/product-details.html
@@ -854,7 +854,7 @@
     </footer>
     <!--! footer end -->
 
-    <script src="js/index.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
