--- a/single-blog.html
+++ b/single-blog.html
@@ -725,7 +725,7 @@
     </footer>
     <!--! footer end -->
 
-    <script src="js/index.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
