--- a/index.html
+++ b/index.html
@@ -250,6 +250,38 @@
     </section>
     <!--! modal search end -->
 
+    <!--! modal dialog start -->
+    <div id="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-close">
+                <i class="bi bi-x"></i>
+            </div>
+            <div class="modal-image">
+                <img src="img/modal-dialog.jpg" alt="">
+            </div>
+            <div class="popup-wrapper">
+                <div class="popup-content">
+                    <div class="popup-title">
+                        <h3>NEWSLETTER</h3>
+                    </div>
+                    <p class="popup-text">
+                        Sign up to our newsletter and get exclusive deals you won find any where else straight to your
+                        inbox!
+                    </p>
+                    <form class="popup-form">
+                        <input type="text" placeholder="Enter Email Address Here">
+                        <button class="btn btn-lg btn-primary">SUBSCRİBE</button>
+                        <label for="popup-checkbox">
+                            <input id="popup-checkbox" type="checkbox">
+                            <span>Don't show this popup again</span>
+                        </label>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--! modal dialog end -->
+
     <!--! slider start -->
     <section id="slider">
         <div id="slider-elements">
