--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                             <div id="header-bag">
                                 <a href="shop.html">
                                     <i class="bi bi-bag"></i>
-                                    <span id="header-cart-count">0</span>
+                                    <span class="header-card-count">0</span>
                                 </a>
                             </div>
                         </div>
